--- a/nuxt3-quasar/package.json
+++ b/nuxt3-quasar/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "@types/node": "^18",
     "nuxt": "^3.5.2",
-    "nuxt-quasar-ui": "^1.7.4"
+    "nuxt-quasar-ui": "^1.7.4",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
