--- a/nuxt3-quasar/package.json
+++ b/nuxt3-quasar/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
-    "firebase": "^9.22.2",
+    "nuxt-vuefire": "^0.1.6",
     "quasar": "^2.12.0",
     "vuefire": "^3.1.0"
   }
