--- a/nuxt3-quasar/package.json
+++ b/nuxt3-quasar/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "firebase": "^9.22.2",
-    "quasar": "^2.12.0",
-    "vuefire": "^3.1.0"
+    "quasar": "^2.12.0"
   }
 }
