--- a/nuxt3-quasar/package.json
+++ b/nuxt3-quasar/package.json
@@ -9,11 +9,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.5.2",
     "nuxt-quasar-ui": "^1.7.4",
+    "prettier": "^3.0.0",
     "sass": "^1.62.1",
-    "sass-loader": "^13.3.1"
+    "sass-loader": "^13.3.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
