--- a/nuxt3-quasar/package.json
+++ b/nuxt3-quasar/package.json
@@ -27,8 +27,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "@quasar/extras": "^1.16.4",
     "firebase": "^9.22.2",
+    "pinia": "^2.1.4",
     "quasar": "^2.12.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
