Feat: typeRoots 옵션 추가 커스텀 타입 사용을 위한 수정

--- a/nuxt3-quasar/tsconfig.json
+++ b/nuxt3-quasar/tsconfig.json
@@ -2,6 +2,7 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": ["./types", "./node_modules/@types"]
   }
 }
