--- a/nuxt3-vuetify/package.json
+++ b/nuxt3-vuetify/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify-nuxt-module": "^0.18.7"
   }
 }
