--- a/nuxt3-vuetify/package.json
+++ b/nuxt3-vuetify/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
+    "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
