--- a/nuxt3-vuetify/package.json
+++ b/nuxt3-vuetify/package.json
@@ -14,10 +14,12 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
+    "@pinia/nuxt": "^0.11.2",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
     "vuetify-nuxt-module": "^0.18.7"
