--- a/nuxt3-vuetify/package.json
+++ b/nuxt3-vuetify/package.json
@@ -15,11 +15,13 @@
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@pinia/nuxt": "^0.11.2",
+    "@vueuse/integrations": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
+    "universal-cookie": "^7.2.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
     "vuetify-nuxt-module": "^0.18.7"
